tests/machine/x/fortran/str_builtin.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/str_builtin.f90:3:10:

    3 |   print *, str(123)
      |          1
Error: Function ‘str’ at (1) has no IMPLICIT type

