tests/machine/x/fortran/str_builtin.f90
program main
  implicit none
  print *, str(123)
end program main
